add new iconfont

--- a/demo.html
+++ b/demo.html
@@ -54,6 +54,9 @@
 
             <div class="nav-view">
 
+                <!--
+                    此遮罩层当用户在搜索时显示，默认display:none;
+                -->
                 <div class="alpha" style="display: block"></div>
 
 
@@ -339,15 +342,58 @@
                             </div>
                             <div class="content">
                                 <img src="img/no-pic.jpg" alt=""/>
+                                 <span class="msg-status">
+                                    <i class="iconfont iconfont-refresh"></i>
+                                </span>
                             </div>
                         </div>
-                        <div class="msg-failed">
+                      <!--  <div class="msg-failed">
                             <i class="iconfont iconfont-information"></i>
                             发送失败，点击 <a href="">重新发送</a>
                         </div>
-                        
+                        -->
                     </div>
                 </div><!-- /msg-out -->
+
+
+
+
+
+                <div class="clearfix">
+                    <div class="msg msg-in">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                <img src="img/no-pic.jpg" alt=""/>
+                                 <span class="msg-status">
+                                    <img src="img/loading.gif" alt=""/>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /msg-in -->
+
+
+
+
+
+                <div class="clearfix">
+                    <div class="msg msg-in">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                <img src="img/no-pic.jpg" alt=""/>
+                                 <span class="msg-status">
+                                    <i class="iconfont iconfont-delete"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /msg-in -->
 
 
                 <div class="msg-system msg-system-his">
