--- a/demo.html
+++ b/demo.html
@@ -347,13 +347,10 @@
                                 </span>
                             </div>
                         </div>
-                      <!--  <div class="msg-failed">
-                            <i class="iconfont iconfont-information"></i>
-                            发送失败，点击 <a href="">重新发送</a>
-                        </div>
-                        -->
                     </div>
                 </div><!-- /msg-out -->
+
+
 
 
 
@@ -432,6 +429,11 @@
                 </div><!-- /edit-box -->
 
                 <div class="action">
+
+                    <div class="action-tip">
+                        发送的消息不能为空，请重新输入
+                    </div>
+
                     <span class="desc">按下Ctrl+Enter换行</span>
                     <a class="btn btn-l btn-info" href="">发送</a>
                 </div>
