--- a/demo.html
+++ b/demo.html
@@ -431,7 +431,7 @@
                 <div class="action">
 
                     <div class="action-tip">
-                        发送的消息不能为空，请重新输入
+                        发送的消息不能为空
                     </div>
 
                     <span class="desc">按下Ctrl+Enter换行</span>
