--- a/demo.html
+++ b/demo.html
@@ -62,8 +62,7 @@
 
                 <!-- 暂无联系人提示：-->
                 <div class="nav-view-tip"  style="display:none;">
-                    您最近还没有会话记录 <br/>
-                    快来联系小伙伴吧
+                    您最近还没有会话记录
                 </div>
 
 
@@ -582,6 +581,14 @@
         </div>
         <!-- E sidebar-->
 
+
+
+
+        <!-- S 无聊天记录-->
+        <div class="blank">
+            
+        </div>
+        <!-- E 无聊天记录-->
 
 
 
