add blank layer

--- a/demo.html
+++ b/demo.html
@@ -586,7 +586,7 @@
 
         <!-- S 无聊天记录-->
         <div class="blank">
-            
+            未选择聊天
         </div>
         <!-- E 无聊天记录-->
 
