add blank layer

--- a/demo.html
+++ b/demo.html
@@ -586,7 +586,10 @@
 
         <!-- S 无聊天记录-->
         <div class="blank">
-            未选择聊天
+           <div class="blank-txt">
+               <img src="img/logo_n.png" alt=""/>
+               <p>未选择聊天</p>
+           </div>
         </div>
         <!-- E 无聊天记录-->
 
