--- a/demo.html
+++ b/demo.html
@@ -585,7 +585,7 @@
 
 
         <!-- S 无聊天记录-->
-        <div class="blank">
+        <div class="blank" style="display: none">
            <div class="blank-txt">
                <img src="img/logo_n.png" alt=""/>
                <p>未选择聊天</p>
