--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@
             <div class="search-bar">
                 <i class="iconfont iconfont-search"></i>
                 <input type="text" class="txt" placeholder="搜索最近联系人"/>
-                <ul class="search-lst">
+                <ul class="search-lst" style="display:none;">
                     <li>
                         <div class="avatar">
                             <img src="img/avatar.jpg" alt=""/>
@@ -57,7 +57,7 @@
                 <!--
                     此遮罩层当用户在搜索时显示，默认display:none;
                 -->
-                <div class="alpha" style="display: block"></div>
+                <div class="alpha" style="display: none"></div>
 
 
                 <!-- 暂无联系人提示：-->
