add default pic

--- a/demo.html
+++ b/demo.html
@@ -362,7 +362,7 @@
                                 <img src="img/avatar.jpg" alt=""/>
                             </div>
                             <div class="content">
-                                <img src="img/no-pic.jpg" alt=""/>
+                                <img src="img/pic_default.jpg" alt=""/>
                                  <span class="msg-status">
                                     <img src="img/loading.gif" alt=""/>
                                 </span>
@@ -390,6 +390,24 @@
                         </div>
                     </div>
                 </div><!-- /msg-in -->
+
+
+
+                <div class="clearfix">
+                    <div class="msg msg-out">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                <img src="img/pic_default.jpg" alt=""/>
+                                 <span class="msg-status">
+                                    <img src="img/loading.gif" alt=""/>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /msg-out -->
 
 
                 <div class="msg-system msg-system-his">
