--- a/demo.html
+++ b/demo.html
@@ -418,6 +418,9 @@
 
 
 
+                <div class="msg-system msg-system-new">
+                    1223
+                </div>
 
 
             </div>
