--- a/demo.html
+++ b/demo.html
@@ -418,11 +418,6 @@
 
 
 
-                <div class="msg-system msg-system-new">
-                    1223
-                </div>
-
-
             </div>
             <!-- E chat-area-bd-->
 
@@ -431,6 +426,19 @@
 
 
             <div class="chat-edit">
+
+
+                <div class="msg-new-tip">
+                    <div class="avatar">
+                        <img src="img/avatar.jpg" alt="">
+                    </div>
+                    <p class="msg-new-txt">欢迎光临，小二在此迎候多时！</p>
+
+                    <i class="iconfont iconfont-close"></i>
+                </div>
+
+
+
 
                 <div class="toolbar">
                     <span class="toolbar-item">
