--- a/demo.html
+++ b/demo.html
@@ -428,7 +428,7 @@
             <div class="chat-edit">
 
 
-                <div class="msg-new-tip">
+                <div class="msg-new-tip" style="display: none">
                     <div class="avatar">
                         <img src="img/avatar.jpg" alt="">
                     </div>
