--- a/demo.html
+++ b/demo.html
@@ -481,6 +481,9 @@
         <div class="sidebar">
 
 
+            <!-- 内贸站页面 -->
+            <div class="prod-wrap"></div>
+            <!-- /内贸站页面 -->
 
 
             <!-- 历史消息-->
