--- a/demo.html
+++ b/demo.html
@@ -484,6 +484,20 @@
             <!-- 内贸站页面 -->
             <div class="prod-wrap">
 
+
+                <ul class="prod-tab">
+                    <li class="on">浏览商品</li>
+                    <li>订单信息</li>
+                </ul>
+                <div class="tab-con">
+                    <div class="tab-node">
+
+                    </div><!-- /tab-node -->
+                    <div class="tab-node">
+
+                    </div><!-- /tab-node -->
+                </div>
+
                 <!--todo-->
 
                 <!-- 设置按钮过渡页面 -->
