add company panel

--- a/demo.html
+++ b/demo.html
@@ -489,9 +489,30 @@
                     <li class="on">浏览商品</li>
                     <li>订单信息</li>
                 </ul>
-                <div class="tab-con">
+                <div class="prod-tab-con">
                     <div class="tab-node">
-
+                        <div class="com-panel">
+                            <h4><a href="" target="_blank">焦点科技股份有限公司</a></h4>
+                            <p class="com-cert">
+                                <i class="iconfont iconfont-img"></i>
+                                <i class="iconfont iconfont-set"></i>
+                                <i class="iconfont iconfont-emoji"></i>
+                            </p>
+                            <dl class="accnt">
+                                <dt>联系人：</dt>
+                                <dd>刘先生</dd>
+                                <dt>职务：</dt>
+                                <dd>采购主管</dd>
+                            </dl>
+                            <dl class="accnt">
+                                <dt>电话：</dt>
+                                <dd>18859955566</dd>
+                            </dl>
+                            <dl class="accnt">
+                                <dt>邮箱：</dt>
+                                <dd><a href="mailto:tm@made-in-china.com">tm@made-in-china.com</a></dd>
+                            </dl>
+                        </div>
                     </div><!-- /tab-node -->
                     <div class="tab-node">
 
