--- a/demo.html
+++ b/demo.html
@@ -512,14 +512,22 @@
                                 <dt>邮箱：</dt>
                                 <dd><a href="mailto:tm@made-in-china.com">tm@made-in-china.com</a></dd>
                             </dl>
-                        </div>
+                        </div><!-- com-panel-->
+                        <ul class="prod-lst">
+                            <li>
+                                <h3>当前浏览商品</h3>
+                                <div class="prod-info">
+                                    
+                                </div>
+                            </li>
+
+                        </ul>
                     </div><!-- /tab-node -->
                     <div class="tab-node">
 
                     </div><!-- /tab-node -->
                 </div>
 
-                <!--todo-->
 
                 <!-- 设置按钮过渡页面 -->
 
