--- a/demo.html
+++ b/demo.html
@@ -515,9 +515,24 @@
                         </div><!-- com-panel-->
                         <ul class="prod-lst">
                             <li>
-                                <h3>当前浏览商品</h3>
-                                <div class="prod-info">
-                                    
+                                <div class="prod-hd">
+                                    <h3>当前浏览商品</h3>
+                                </div>
+                                <div class="prod-bd">
+                                    <div class="prod-pic-wrap">
+                                        <div class="prod-pic">
+                                            <img src="img/avatar.jpg" alt=""/>
+                                        </div>
+                                    </div>
+                                    <dl class="prod-info">
+                                        <dt>
+                                            <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                        </dt>
+                                        <dd>
+                                            <span class="prod-price">￥ 100.00</span>
+                                            <a class="btn btn-s btn-blank" href="">发送</a>
+                                        </dd>
+                                    </dl>
                                 </div>
                             </li>
 
