--- a/demo.html
+++ b/demo.html
@@ -513,30 +513,137 @@
                                 <dd><a href="mailto:tm@made-in-china.com">tm@made-in-china.com</a></dd>
                             </dl>
                         </div><!-- com-panel-->
-                        <ul class="prod-lst">
-                            <li>
-                                <div class="prod-hd">
-                                    <h3>当前浏览商品</h3>
-                                </div>
-                                <div class="prod-bd">
-                                    <div class="prod-pic-wrap">
-                                        <div class="prod-pic">
-                                            <img src="img/avatar.jpg" alt=""/>
-                                        </div>
-                                    </div>
-                                    <dl class="prod-info">
-                                        <dt>
-                                            <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
-                                        </dt>
-                                        <dd>
-                                            <span class="prod-price">￥ 100.00</span>
-                                            <a class="btn btn-s btn-blank" href="">发送</a>
-                                        </dd>
-                                    </dl>
-                                </div>
-                            </li>
 
-                        </ul>
+                        <!-- S 当前浏览商品 -->
+                        <div class="prod-lst-wrap">
+                            <div class="prod-hd">
+                                <h3>当前浏览商品</h3>
+                            </div>
+                            <ul class="prod-lst">
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- E 当前浏览商品 -->
+
+
+
+
+                        <!-- S 历史浏览商品 -->
+                        <div class="prod-lst-wrap">
+                            <div class="prod-hd">
+                                <h3>历史浏览商品</h3>
+                            </div>
+                            <ul class="prod-lst prod-lst-history">
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- E 历史浏览商品 -->
                     </div><!-- /tab-node -->
                     <div class="tab-node">
 
