--- a/demo.html
+++ b/demo.html
@@ -485,12 +485,12 @@
             <div class="prod-wrap">
 
 
-                <ul class="prod-tab">
+                <ul class="prod-tab js-tab">
                     <li class="on">浏览商品</li>
                     <li>订单信息</li>
                 </ul>
                 <div class="prod-tab-con">
-                    <div class="tab-node">
+                    <div class="tab-node on">
                         <div class="com-panel">
                             <h4><a href="" target="_blank">焦点科技股份有限公司</a></h4>
                             <p class="com-cert">
@@ -645,7 +645,107 @@
                         </div>
                         <!-- E 历史浏览商品 -->
                     </div><!-- /tab-node -->
-                    <div class="tab-node">
+                    <div class="tab-node" style="display:none;">
+
+                        <!-- S 订单信息 -->
+                        <div class="prod-lst-wrap">
+                            <div class="prod-hd">
+                                <h3>订单信息</h3>
+                            </div>
+                            <ul class="prod-lst">
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="prod-bd">
+                                        <div class="prod-pic-wrap">
+                                            <div class="prod-pic">
+                                                <img src="img/avatar.jpg" alt=""/>
+                                            </div>
+                                        </div>
+                                        <dl class="prod-info">
+                                            <dt>
+                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
+                                            </dt>
+                                            <dd>
+                                                <span class="prod-price">￥ 100.00</span>
+                                                <a class="btn btn-s btn-blank" href="">发送</a>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- E 订单信息 -->
 
                     </div><!-- /tab-node -->
                 </div>
