modify order list

--- a/demo.html
+++ b/demo.html
@@ -649,11 +649,12 @@
 
                         <!-- S 订单信息 -->
                         <div class="prod-lst-wrap">
-                            <div class="prod-hd">
-                                <h3>订单信息</h3>
-                            </div>
                             <ul class="prod-lst">
                                 <li>
+                                    <div class="prod-hd">
+                                        <h3>DD20170803654</h3>
+                                        <span class="order-time">2017-06-26</span>
+                                    </div>
                                     <div class="prod-bd">
                                         <div class="prod-pic-wrap">
                                             <div class="prod-pic">
@@ -672,6 +673,10 @@
                                     </div>
                                 </li>
                                 <li>
+                                    <div class="prod-hd">
+                                        <h3>DD20170803654</h3>
+                                        <span class="order-time">2017-06-26</span>
+                                    </div>
                                     <div class="prod-bd">
                                         <div class="prod-pic-wrap">
                                             <div class="prod-pic">
@@ -690,6 +695,10 @@
                                     </div>
                                 </li>
                                 <li>
+                                    <div class="prod-hd">
+                                        <h3>DD20170803654</h3>
+                                        <span class="order-time">2017-06-26</span>
+                                    </div>
                                     <div class="prod-bd">
                                         <div class="prod-pic-wrap">
                                             <div class="prod-pic">
@@ -708,24 +717,10 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="prod-bd">
-                                        <div class="prod-pic-wrap">
-                                            <div class="prod-pic">
-                                                <img src="img/avatar.jpg" alt=""/>
-                                            </div>
-                                        </div>
-                                        <dl class="prod-info">
-                                            <dt>
-                                                <a href="" target="_blank" title="现货供应贴片电解5x5片式铝片">现货供应贴片电解5x5片式铝片</a>
-                                            </dt>
-                                            <dd>
-                                                <span class="prod-price">￥ 100.00</span>
-                                                <a class="btn btn-s btn-blank" href="">发送</a>
-                                            </dd>
-                                        </dl>
+                                    <div class="prod-hd">
+                                        <h3>DD20170803654</h3>
+                                        <span class="order-time">2017-06-26</span>
                                     </div>
-                                </li>
-                                <li>
                                     <div class="prod-bd">
                                         <div class="prod-pic-wrap">
                                             <div class="prod-pic">
