--- a/demo.html
+++ b/demo.html
@@ -485,7 +485,7 @@
             <div class="prod-wrap">
 
 
-                <ul class="prod-tab js-tab">
+                <ul class="prod-tab js-tab-prod">
                     <li class="on">浏览商品</li>
                     <li>订单信息</li>
                 </ul>
