--- a/demo.html
+++ b/demo.html
@@ -1057,7 +1057,28 @@
 
 
 
-<div class="pop pop-tip" style="display:block; left: 60%; top: 1500px;">
+
+<div class="pop pop-tip" style="display:block; left: 40%; top: 1500px;">
+    <div class="pop-hd">
+        <h3>提示</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+        <p class="tac">
+            连接失败，请重试
+        </p>
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">重试</a>
+        <a class="btn btn-l btn-default" href="javascript:;">取消</a>
+    </div>
+</div><!-- /提示2 -->
+
+
+
+
+<div class="pop pop-tip" style="display:block; left: 70%; top: 1500px;">
     <div class="pop-hd">
         <h3>提示</h3>
         <i class="iconfont iconfont-close"></i>
@@ -1070,7 +1091,7 @@
     <div class="pop-ft">
         <a class="btn btn-l btn-info" href="javascript:;">确定</a>
     </div>
-</div><!-- /提示2 -->
+</div><!-- /提示3 -->
 
 
 
