add offline tip

--- a/demo.html
+++ b/demo.html
@@ -54,6 +54,11 @@
 
             <div class="nav-view">
 
+
+                <div class="nav-view-offline">
+                    <i class="iconfont iconfont-information"></i> 连接失败，请<a href="">重试</a>。
+                </div>
+
                 <!--
                     此遮罩层当用户在搜索时显示，默认display:none;
                 -->
@@ -1065,6 +1070,7 @@
     </div>
     <div class="pop-bd">
         <p class="tac">
+            <i class="iconfont iconfont-information"></i>
             连接失败，请重试
         </p>
     </div>
