--- a/demo.html
+++ b/demo.html
@@ -888,7 +888,7 @@
 
 
         <!-- S 无聊天记录-->
-        <div class="blank" style="display: none">
+        <div class="blank" style="display: block">
            <div class="blank-txt">
                <img src="img/logo_n.png" alt=""/>
                <p>未选择聊天</p>
@@ -902,7 +902,11 @@
 
 
 
-
+    <div class="init">
+        <img src="img/logo_n.png" alt="" width="400px"/>
+        <br/>
+        <img src="img/progress.gif" alt="" class="init-loading"/>
+    </div>
 
     </div><!-- /main -->
 </div>
