--- a/demo.html
+++ b/demo.html
@@ -906,6 +906,8 @@
         <img src="img/logo_n.png" alt="" width="400px"/>
         <br/>
         <img src="img/progress.gif" alt="" class="init-loading"/>
+
+        <p>加载中，请稍后...</p>
     </div>
 
     </div><!-- /main -->
