--- a/demo.html
+++ b/demo.html
@@ -903,12 +903,12 @@
 
 
     <div class="init">
-        <img src="img/logo_n.png" alt="" width="400px"/>
-        <br/>
-        <img src="img/progress.gif" alt="" class="init-loading"/>
+            <img src="img/logo_n.png" alt="" width="400px"/>
+            <br/>
+            <img src="img/progress.gif" alt="" class="init-loading"/>
 
-        <p>加载中，请稍后...</p>
-    </div>
+            <p>连接中，请稍后...</p>
+        </div>
 
     </div><!-- /main -->
 </div>
