--- a/demo.html
+++ b/demo.html
@@ -758,7 +758,7 @@
 
 
             <!-- 历史消息-->
-            <div class="msg-history fadeOutL js-msg-history">
+            <div class="msg-history fadeOutL js-msg-history" style="display:block;">
 
                 <div class="msg-history-hd">
                     <h2>消息记录</h2>
