--- a/demo.html
+++ b/demo.html
@@ -902,10 +902,9 @@
 
 
 
-    <div class="init" style="display:none;">
+    <div class="init" style="display:block;">
             <img src="img/logo_n.png" alt="" width="400px"/>
             <br/>
-            <img src="img/progress.gif" alt="" class="init-loading"/>
 
             <p>连接中，请稍后...</p>
         </div>
