--- a/demo.html
+++ b/demo.html
@@ -906,7 +906,11 @@
             <img src="img/logo_n.png" alt="" width="400px"/>
             <br/>
 
-            <p>连接中，请稍后...</p>
+            <p>连接中，请稍后 <img src="img/process.gif" alt=""/></p>
+            <p>
+                <i class="iconfont iconfont-information"></i>
+                连接失败，请<a href="">重试</a>
+            </p>
         </div>
 
     </div><!-- /main -->
@@ -1068,6 +1072,7 @@
 
 
 
+<!--
 <div class="pop pop-tip" style="display:block; left: 40%; top: 1500px;">
     <div class="pop-hd">
         <h3>提示</h3>
@@ -1084,7 +1089,8 @@
         <a class="btn btn-l btn-info" href="javascript:;">重试</a>
         <a class="btn btn-l btn-default" href="javascript:;">取消</a>
     </div>
-</div><!-- /提示2 -->
+</div>&lt;!&ndash; /提示2 &ndash;&gt;
+-->
 
 
 
