modify avatar border

--- a/demo.html
+++ b/demo.html
@@ -902,7 +902,7 @@
 
 
 
-    <div class="init" style="display:block;">
+    <div class="init" style="display:none;">
             <img src="img/logo_n.png" alt="" width="400px"/>
             <br/>
 
