--- a/demo.html
+++ b/demo.html
@@ -84,7 +84,7 @@
                             </div>
                             <div class="bd">
                                 <p class="msg">
-                                    好的，谢谢
+                                    <i class="iconfont iconfont-information"></i>好的，谢谢
                                 </p>
                                 <span class="time">17:00</span>
                             </div>
