--- a/demo.html
+++ b/demo.html
@@ -101,6 +101,7 @@
                             </div>
                             <div class="bd">
                                 <p class="msg">
+                                    <i class="iconfont iconfont-information"></i>
                                     好的，谢谢
                                 </p>
                                 <span class="time">17:00</span>
