--- a/demo.html
+++ b/demo.html
@@ -447,15 +447,29 @@
 
 
                 <div class="toolbar">
-                    <span class="toolbar-item">
+                    <div class="toolbar-item">
                         <i class="iconfont iconfont-emoji"></i>
-                    </span>
-                    <span class="toolbar-item">
+                    </div>
+                    <div class="toolbar-item">
                         <i class="iconfont iconfont-img"></i>
-                    </span>
-                    <span class="toolbar-item flr js-toggle-record">
+                    </div>
+                    <div class="toolbar-item flr js-toggle-record">
                         <i class="iconfont iconfont-clock"></i>
-                    </span>
+                    </div>
+                    <div class="toolbar-item flr">
+                        <i class="iconfont iconfont-kefu"></i>
+                        <div class="poptip-service">
+                            <h4>选择客服</h4>
+                            <ul class="mate-lst">
+                                <li>管理员</li>
+                                <li>客服1</li>
+                                <li>客服2</li>
+                                <li>客服3</li>
+                                <li>客服4</li>
+                                <li>客服5</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div><!-- /toolbar -->
 
                 <div class="chat-edit-area">
@@ -1078,6 +1092,27 @@
         <a class="btn btn-l btn-default" href="javascript:;">取消</a>
     </div>
 </div><!-- /提示1 -->
+
+
+
+<div class="pop pop-tip" style="display:block; left: 40%; top: 1500px;">
+    <div class="pop-hd">
+        <h3>提示</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+        发送至：
+          <p class="mate-txt">
+              <i class="iconfont iconfont-kefu"></i> 客服2
+          </p>
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">确定</a>
+        <a class="btn btn-l btn-default" href="javascript:;">取消</a>
+    </div>
+</div><!-- /提示1 -->
+
 
 
 
