--- a/vo.html
+++ b/vo.html
@@ -3,8 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>麦通二期</title>
+    <link rel="stylesheet" href="style/css/module/vo.css"/>
 </head>
 <body>
+
+    <!-- S header-->
+    <div class="header">
+    header
+    </div>
+    <!-- E header-->
+
+
+    <!-- S content-->
+    <div class="content">
+
+        <!-- S side-wrap-->
+        <div class="side-wrap">
+            <div class="menu-wrap">
+                <div class="menu">
+                    <div class="menu-hd">
+                        <i class="iconfont iconfont-user"></i>
+                        客户管理
+                    </div>
+                    <div class="menu-bd">
+                        <ul class="menu-lst">
+                            <li>
+                                <a href="#">客户对话信息</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!-- /menu -->
+                <div class="menu">
+                    <div class="menu-hd">
+                        <i class="iconfont iconfont-data"></i>
+                        数据统计
+                    </div>
+                    <div class="menu-sub">
+                        <div class="menu-hd">
+                            业务统计
+                            <i class="iconfont iconfont-arrow-btm"></i>
+                        </div>
+                        <div class="menu-bd">
+                            <ul class="menu-lst">
+                                <li>
+                                    <a href="#">对话量</a>
+                                </li>
+                                <li>
+                                    <a href="#">对话时段</a>
+                                </li>
+                                <li>
+                                    <a href="#">客户分布</a>
+                                </li>
+                                <li>
+                                    <a href="#">客户行为</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div><!-- /menu -->
+                <div class="menu">
+                    <div class="menu-hd">
+                        <i class="iconfont iconfont-seting"></i>
+                        设置
+                    </div>
+                    <div class="menu-bd">
+                        <ul class="menu-lst">
+                            <li>
+                                <a href="#">链接</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!-- /menu -->
+            </div>
+        </div>
+        <!-- S side-wrap-->
+
+
+        <!-- S main-wrap-->
+        <div class="main-wrap">
+            <div class="main">
+                main
+            </div>
+        </div>
+        <!-- S main-wrap-->
+
+    </div>
+    <!-- E header-->
+
+
 
 </body>
 </html>
